# warehouse-facility

./: Cargo.toml  Makefile  README.md  provenance-config.json  terroir.config.json
artifacts/: checksums.txt  warehouse_facility.wasm
examples/: schema.rs
schema/: asset.json  contract_info.json  execute_msg.json  facility.json  instantiate_msg.json  pledge.json  query_msg.json
src/: contract.rs  contract_info.rs  error.rs  lib.rs  msg.rs  state.rs  utils.rs
