[package]
name = "warehouse-facility"
version = "0.1.0"
authors = ["Kory Herzinger <kherzinger@figure.com>"]
edition = "2018"

exclude = [
  "warehouse_facility.wasm",
  "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
#backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.16.0", features = ["staking"] }
cosmwasm-storage = { version = "0.16.0" }
cw-storage-plus = { version = "0.8.0", features = ["iterator"] }
provwasm-std = { version = "0.16.0" }
rust_decimal = { version = "1.14", features = ["serde-float"] }
schemars = "0.8.1"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
uuid = { version = "0.8.2" }
bech32 = { version = "0.8.1" }
sha2 = { version = "0.9.8" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
provwasm-mocks = { version = "0.16.0" }
